# fixme

./: .envrc  .gitignore  CHANGELOG.md  README.md  fixme.cabal  flake.nix  qqq.qqq
.fixme/: config  log
app/: Main.hs
app/Fixme/: Base58.hs  Config.hs  Defaults.hs  Git.hs  Hash.hs  LocalConfig.hs  OrDie.hs  Prelude.hs  RunListAttribs.hs  RunLog.hs  RunLogMacro.hs  RunReport.hs  RunUpdate.hs  State.hs  Types.hs
doc/: devlog  local-conf.md
doc/fixme/: find-root-fixme-dir.txt
lib/Fixme/: Defaults.hs  Git.hs  Hash.hs  Prelude.hs  State.hs  Types.hs
