cabal-version:      3.0
name:               fixme
version:            0.2.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
maintainer:         dzuikov@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds


  default-language:  GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , RecordWildCards

library
  import:           shared-properties

  exposed-modules:
      Fixme.Prelude
      Fixme.Hash
      Fixme.Types
      Fixme.Git
      Fixme.Config
      Fixme.State
      Fixme.Defaults

  build-depends:   base, hbs2-core, db-pipe
                 , aeson
                 , aeson-pretty
                 , async
                 , attoparsec
                 , base16-bytestring
                 , base58-bytestring
                 , bytestring
                 , containers
                 , crypton
                 , data-default
                 , directory
                 , filepath
                 , filepattern
                 , interpolatedstring-perl6
                 , memory
                 , microlens-platform
                 , microstache
                 , mtl
                 , optparse-applicative
                 , prettyprinter
                 , safe
                 , serialise
                 , sqlite-simple
                 , suckless-conf
                 , text
                 , text-ansi
                 , transformers
                 , typed-process
                 , uniplate
                 , unordered-containers
                 , uuid
                 , generic-data
                 , generic-deriving
                 , hashable
                 , unliftio

  hs-source-dirs:   lib


executable fixme
    import:           shared-properties
    main-is:          Main.hs

    ghc-options:
          -Wall
          -- -fno-warn-unused-matches
          -- -fno-warn-unused-do-bind
          -- -Werror=missing-methods
          -- -Werror=incomplete-patterns
          -- -fno-warn-unused-binds
          -threaded
          -rtsopts
          "-with-rtsopts=-N4 -A64m -AL256m -I0"


    other-modules:
      Fixme.LocalConfig
      Fixme.RunUpdate
      Fixme.RunListAttribs
      Fixme.RunReport
      Fixme.RunLog
      Fixme.RunLogMacro
      Paths_fixme

    -- other-extensions:
    build-depends:   base, fixme, hbs2-core
                   , aeson
                   , aeson-pretty
                   , async
                   , attoparsec
                   , base16-bytestring
                   , base58-bytestring
                   , bytestring
                   , containers
                   , crypton
                   , data-default
                   , directory
                   , filepath
                   , filepattern
                   , interpolatedstring-perl6
                   , memory
                   , microlens-platform
                   , microstache
                   , mtl
                   , optparse-applicative
                   , prettyprinter
                   , safe
                   , serialise
                   , sqlite-simple
                   , suckless-conf
                   , text
                   , text-ansi
                   , transformers
                   , typed-process
                   , uniplate
                   , unordered-containers
                   , uuid
                   , generic-data
                   , generic-deriving
                   , hashable

    hs-source-dirs:   app


